RJ-2025-030 remove installation

--- a/_articles/RJ-2025-030/Applications.Rmd
+++ b/_articles/RJ-2025-030/Applications.Rmd
@@ -314,7 +314,7 @@ for high-throughput phenotyping tasks [@Olivoto2022].
 
 (ref:pliman1) **Preparing Segmentation using `pliman`**: The image comprises two sections. On the left, an image of microbeads is displayed. On the right, a cropped view from the same image illustrates two states for segmentation: the microbead (foreground) in red, and the background is shown in black, emphasizing the clear division needed for segmentation analysis.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 if(!require(EBImage)) {
   if (!require("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
