RJ-2025-030 not self-contained to avoid aria-label pandoc escaping bug

--- a/_articles/RJ-2025-030/RJ-2025-030.Rmd
+++ b/_articles/RJ-2025-030/RJ-2025-030.Rmd
@@ -40,7 +40,7 @@ author:
 type: package
 output:
   rjtools::rjournal_article:
-    self_contained: yes
+    self_contained: no
     toc: no
 always_allow_html: yes
 bibliography: RImageReview.bib
