--- a/_articles/RJ-2025-030/RJ-2025-030.tex
+++ b/_articles/RJ-2025-030/RJ-2025-030.tex
@@ -2,7 +2,7 @@
 \title{Exploring Image Analysis in R: Applications and Advancements}
 
 
-\author{by Tim Brauckhoff, Julius Rublack, and Stefan Rödiger (corresponding author)}
+\author{by Tim Brauckhoff, Julius Rublack, and Stefan Rödiger}
 
 \maketitle
 
@@ -1909,110 +1909,6 @@ enhanced data visualization. It is important that such technologies stick to
 one of \texttt{R}'s strengths, which is explainability, in particular focusing on transparent,
 understandable, and explainable AI (xAI).
 
-\pagebreak
-
-\subsection{Session Info}\label{session-info}
-
-\begin{verbatim}
-#> R version 4.5.1 (2025-06-13)
-#> Platform: x86_64-pc-linux-gnu
-#> Running under: KDE neon 6.3
-#> 
-#> Matrix products: default
-#> BLAS:   /usr/lib/x86_64-linux-gnu/openblas-pthread/libblas.so.3 
-#> LAPACK: /usr/lib/x86_64-linux-gnu/openblas-pthread/libopenblasp-r0.3.26.so;  LAPACK version 3.12.0
-#> 
-#> locale:
-#>  [1] LC_CTYPE=en_GB.UTF-8       LC_NUMERIC=C              
-#>  [3] LC_TIME=en_GB.UTF-8        LC_COLLATE=en_GB.UTF-8    
-#>  [5] LC_MONETARY=en_GB.UTF-8    LC_MESSAGES=en_GB.UTF-8   
-#>  [7] LC_PAPER=en_GB.UTF-8       LC_NAME=C                 
-#>  [9] LC_ADDRESS=C               LC_TELEPHONE=C            
-#> [11] LC_MEASUREMENT=en_GB.UTF-8 LC_IDENTIFICATION=C       
-#> 
-#> time zone: Australia/Melbourne
-#> tzcode source: system (glibc)
-#> 
-#> attached base packages:
-#> [1] stats4    stats     graphics  grDevices utils     datasets  methods  
-#> [8] base     
-#> 
-#> other attached packages:
-#>  [1] SPIAT_1.10.0                SpatialExperiment_1.18.1   
-#>  [3] SingleCellExperiment_1.30.1 SummarizedExperiment_1.38.1
-#>  [5] Biobase_2.68.0              GenomicRanges_1.60.0       
-#>  [7] GenomeInfoDb_1.44.3         IRanges_2.42.0             
-#>  [9] S4Vectors_0.46.0            BiocGenerics_0.54.1        
-#> [11] generics_0.1.4              MatrixGenerics_1.20.0      
-#> [13] matrixStats_1.5.0           kableExtra_1.4.0           
-#> [15] data.table_1.17.8           image2data_1.0.1           
-#> [17] mapview_2.11.4              leafsync_0.1.0             
-#> [19] sf_1.0-21                   terra_1.8-70               
-#> [21] FIELDimageR.Extra_0.0.5     nlme_3.1-168               
-#> [23] FIELDimageR_0.6.2           pliman_3.1.1               
-#> [25] EBImage_4.50.0              biopixR_1.2.0              
-#> [27] magick_2.9.0                imager_1.0.5               
-#> [29] magrittr_2.0.4              knitr_1.50                 
-#> [31] cluster_2.1.8.1            
-#> 
-#> loaded via a namespace (and not attached):
-#>   [1] spatstat.sparse_3.1-0   fs_1.6.6                bitops_1.0-9           
-#>   [4] lubridate_1.9.4         httr_1.4.7              RColorBrewer_1.1-3     
-#>   [7] tools_4.5.1             R6_2.6.1                withr_3.0.2            
-#>  [10] sp_2.2-0                readbitmap_0.1.5        gridExtra_2.3          
-#>  [13] leaflet_2.2.3           leafem_0.2.5            cli_3.6.5              
-#>  [16] textshaping_1.0.3       spatstat.explore_3.5-3  sass_0.4.10            
-#>  [19] spatstat.data_3.1-8     mvtnorm_1.3-3           S7_0.2.0               
-#>  [22] readr_2.1.5             proxy_0.4-27            systemfonts_1.2.3      
-#>  [25] svglite_2.2.1           dichromat_2.0-0.1       parallelly_1.45.1      
-#>  [28] maps_3.4.3              readxl_1.4.5            rstudioapi_0.17.1      
-#>  [31] spatstat.random_3.4-2   crosstalk_1.2.2         dplyr_1.1.4            
-#>  [34] Matrix_1.7-4            DescTools_0.99.60       abind_1.4-8            
-#>  [37] lifecycle_1.0.4         yaml_2.3.10             SparseArray_1.8.1      
-#>  [40] tmaptools_3.3           recipes_1.3.1           grid_4.5.1             
-#>  [43] promises_1.4.0          crayon_1.5.3            miniUI_0.1.2           
-#>  [46] lattice_0.22-7          haven_2.5.5             pillar_1.11.1          
-#>  [49] tcltk_4.5.1             rjson_0.2.23            boot_1.3-32            
-#>  [52] gld_2.6.8               future.apply_1.20.0     codetools_0.2-20       
-#>  [55] glue_1.8.0              spatstat.univar_3.1-4   rjtools_1.0.21         
-#>  [58] yesno_0.1.3             vctrs_0.6.5             png_0.1-8              
-#>  [61] spam_2.11-1             cellranger_1.1.0        gtable_0.3.6           
-#>  [64] cachem_1.1.0            gower_1.0.2             xfun_0.53              
-#>  [67] exactextractr_0.10.0    S4Arrays_1.8.1          mime_0.13              
-#>  [70] prodlim_2025.04.28      survival_3.8-3          timeDate_4041.110      
-#>  [73] iterators_1.0.14        hardhat_1.4.2           units_1.0-0            
-#>  [76] lava_1.8.1              fields_17.1             brew_1.0-10            
-#>  [79] ipred_0.9-15            satellite_1.0.6         hunspell_3.0.6         
-#>  [82] bslib_0.9.0             KernSmooth_2.23-26      otel_0.2.0             
-#>  [85] rpart_4.1.24            DBI_1.2.3               raster_3.6-32          
-#>  [88] nnet_7.3-20             Exact_3.3               tidyselect_1.2.1       
-#>  [91] compiler_4.5.1          expm_1.0-0              xml2_1.4.1             
-#>  [94] DelayedArray_0.34.1     bookdown_0.44           scales_1.4.0           
-#>  [97] classInt_0.4-11         goftest_1.2-3           tiff_0.1-12            
-#> [100] stringr_1.5.2           digest_0.6.37           spatstat.utils_3.2-0   
-#> [103] fftwtools_0.9-11        rmarkdown_2.30          XVector_0.48.0         
-#> [106] htmltools_0.5.8.1       pkgconfig_2.0.3         jpeg_0.1-11            
-#> [109] base64enc_0.1-3         fastmap_1.2.0           rlang_1.1.6            
-#> [112] htmlwidgets_1.6.4       UCSC.utils_1.4.0        shiny_1.11.1           
-#> [115] farver_2.1.2            jquerylib_0.1.4         jsonlite_2.0.0         
-#> [118] ModelMetrics_1.2.2.2    RCurl_1.98-1.17         GenomeInfoDbData_1.2.14
-#> [121] dotCall64_1.2           Rcpp_1.1.0              stringi_1.8.7          
-#> [124] pROC_1.19.0.1           rootSolve_1.8.2.4       MASS_7.3-65            
-#> [127] plyr_1.8.9              parallel_4.5.1          listenv_0.9.1          
-#> [130] forcats_1.0.1           lmom_3.2                deldir_2.0-4           
-#> [133] stars_0.6-8             splines_4.5.1           tensor_1.5.1           
-#> [136] hms_1.1.4               leafpop_0.1.0           locfit_1.5-9.12        
-#> [139] igraph_2.1.4            uuid_1.2-1              spatstat.geom_3.6-0    
-#> [142] reshape2_1.4.4          XML_3.99-0.19           evaluate_1.0.5         
-#> [145] BiocManager_1.30.26     bmp_0.3.1               tzdb_0.5.0             
-#> [148] foreach_1.5.2           httpuv_1.6.16           polyclip_1.10-7        
-#> [151] purrr_1.1.0             future_1.67.0           ggplot2_4.0.0          
-#> [154] lwgeom_0.2-14           xtable_1.8-4            e1071_1.7-16           
-#> [157] later_1.4.4             viridisLite_0.4.2       class_7.3-23           
-#> [160] tibble_3.3.0            mapedit_0.7.0           timechange_0.3.0       
-#> [163] shinyWidgets_0.9.0      globals_0.18.0          caret_7.0-1
-\end{verbatim}
-
 \section{Funding}\label{funding}
 
 This review was partially funded by the project Rubin: NeuroMiR (03RU1U051A,
@@ -2051,7 +1947,7 @@ Faculty of Biology\\ Münster, Germany\\
 }
 
 \address{%
-Stefan Rödiger (corresponding author)\\
+Stefan Rödiger\\
 Brandenburg University of Technology Cottbus - Senftenberg\\%
 Institute of Biotechnology\\ Senftenberg, Germany\\
 %
