RJ-2025-028 not self-contained to avoid aria-label pandoc escaping bug
This reverts commit 1de032d025770899ba6939d328bf8e8caf073093.

--- a/_articles/RJ-2025-028/RJ-2025-028.tex
+++ b/_articles/RJ-2025-028/RJ-2025-028.tex
@@ -947,7 +947,7 @@ rahlfPlot()
 
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{RJ-2025-028_files/figure-latex/rahlfplain-1} \caption{The main plot from \ldots{} without the two columns of text annotation. This plot is drawn using functions from the \texttt{graphics} package.}\label{fig:rahlfplain}
+\includegraphics[width=1\linewidth]{RJ-2025-028_files/figure-latex/rahlfplain-1} \caption{The main plot from Figure \ref{fig:rahlf} without the two columns of text annotation. This plot is drawn using functions from the \texttt{graphics} package.}\label{fig:rahlfplain}
 \end{figure}
 
 Because the main plot is drawn using functions from the \texttt{graphics} package,
