2025-3 issue ready for author review

--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -22,7 +22,7 @@ author:
   - (ORCiD 0000-0002-7004-5584)
   - |
     [christoph.dalitz@hs-niederrhein.de](christoph.dalitz@hs-niederrhein.de){.uri}
-- name: 'Felix Lögler'
+- name: Felix Lögler
   affiliation: Niederrhein University of Applied Sciences
   address:
   - Institute for Pattern Recognition
@@ -33,7 +33,7 @@ date: '2025-10-24'
 date_received: '2025-01-22'
 journal:
   firstpage: 125
-  lastpage: 139
+  lastpage: 137
 volume: 17
 issue: 3
 slug: RJ-2025-031
