Re-publish 2025-028 for upstream changes

--- a/_articles/RJ-2025-028/RJ-2025-028.Rmd
+++ b/_articles/RJ-2025-028/RJ-2025-028.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Rendering LaTeX in R
-date: '2025-10-22'
+date: '2025-10-21'
 abstract: |
   The xdvir package provides functions for rendering  LaTeX fragments as labels, annotations, and data symbols in R plots.  There are convenient high-level functions for rendering LaTeX fragments, including labels on ggplot2 plots, plus lower-level functions for more fine control over the separate authoring, typesetting, and rendering steps. There is support for making use of LaTeX packages, including TikZ graphics.  The rendered LaTeX output is fully integrated with R graphics output in the sense that LaTeX output  can be positioned and sized relative to R graphics output and vice versa.
 draft: no
@@ -17,7 +17,6 @@ type: package
 output:
   rjtools::rjournal_pdf_article:
     toc: no
-    keep_tex: yes
   rjtools::rjournal_web_article:
     self_contained: no
     toc: no
@@ -286,7 +285,7 @@ mirrors one way of working with `r LaTeX` documents:
 `r LaTeX` source (a `.tex` file) is processed by a `r TeX` engine
 to produce DVI output (a `.dvi` file) and then the DVI output is
 processed to render PDF output (a `.pdf` file).  The final processing
-step is performed by a \emph{DVI driver}, for example `dvipdf` for PDF output
+step is performed by a *DVI driver*, for example `dvipdf` for PDF output
 or `dvips` for PostScript output.  Different `r TeX` engines produce different
 DVI output. For example, `r LuaTeX` produces a `.dvi` file, but 
 `r XeTeX` produces 
@@ -455,6 +454,7 @@ muDot <- r"(%
 \node[draw,circle,thick,inner sep=0.5mm]{\vphantom{M}$\mu$};
 \end{tikzpicture})"
 ```
+
 ```{r echo=FALSE}
 samples <- data.frame(x=rnorm(50), sample=rep(1:5, each=10))
 means <- aggregate(samples$x, list(sample=samples$sample), mean)
@@ -1724,7 +1724,7 @@ update(latticeCrime,
        main=latexTitle)
 ```
 
-```{r lattice, echo=FALSE, fig.width=7, fig.height=7, fig.keep="last", out.width="100%", fig.cap='(ref:latticeFigCap)', fig.alt="A mulit-panel/facetted line plot showing crime statistics over time, with separate lines for males and females and a separate panel for each type of crime.  The important features are the labels in each panel that describe the type of crime, which are fully-justified to the widths of the panels and are based on fragments of LaTeX code.  The plot title is also based on a LaTeX fragment that colours the word Male the same blue as the lines representing males in each panel and the word Female the same yellow as the lines representing females in each panel."}
+```{r lattice, echo=FALSE, fig.width=7, fig.height=7, fig.keep="last", out.width="100%", fig.cap='(ref:latticeFigCap)', fig.alt="A multi-panel/facetted line plot showing crime statistics over time, with separate lines for males and females and a separate panel for each type of crime.  The important features are the labels in each panel that describe the type of crime, which are fully-justified to the widths of the panels and are based on fragments of LaTeX code.  The plot title is also based on a LaTeX fragment that colours the word Male the same blue as the lines representing males in each panel and the word Female the same yellow as the lines representing females in each panel."}
 <<latticefinal>>
 <<adjustYticks>>
 ```
@@ -1856,7 +1856,7 @@ require fewer dependencies than `xdvir`.
 There are also a number of packages that perform specific
 text-placement tasks, for example \CRANpkg{geomtextpath} [@pkg:geomtextpath],
 which can arrange text along an arbitrary path, and
-\CRANpkg{directlabels} [@pkg:directlabels} and 
+\CRANpkg{directlabels} [@pkg:directlabels] and 
 \CRANpkg{ggforce} [@pkg:ggforce], which provide functions for cleverly
 positioning text annotations, though without typesetting facilities.
 The advantage of `xdvir` by comparison with these packages
