--- a/_articles/RJ-2025-028/RJ-2025-028.tex
+++ b/_articles/RJ-2025-028/RJ-2025-028.tex
@@ -1316,7 +1316,7 @@ Figure \ref{fig:lattice}.
 
 
 \begin{figure}
-\includegraphics[width=1\linewidth,alt={A mulit-panel/facetted line plot showing crime statistics over time, with separate lines for males and females and a separate panel for each type of crime.  The important features are the labels in each panel that describe the type of crime, which are fully-justified to the widths of the panels and are based on fragments of LaTeX code.  The plot title is also based on a LaTeX fragment that colours the word Male the same blue as the lines representing males in each panel and the word Female the same yellow as the lines representing females in each panel.}]{RJ-2025-028_files/figure-latex/lattice-1} \caption{A \CRANpkg{lattice} plot with \LaTeX{} text used for the plot title and for annotations in each panel.}\label{fig:lattice}
+\includegraphics[width=1\linewidth,alt={A multi-panel/facetted line plot showing crime statistics over time, with separate lines for males and females and a separate panel for each type of crime.  The important features are the labels in each panel that describe the type of crime, which are fully-justified to the widths of the panels and are based on fragments of LaTeX code.  The plot title is also based on a LaTeX fragment that colours the word Male the same blue as the lines representing males in each panel and the word Female the same yellow as the lines representing females in each panel.}]{RJ-2025-028_files/figure-latex/lattice-1} \caption{A \CRANpkg{lattice} plot with \LaTeX{} text used for the plot title and for annotations in each panel.}\label{fig:lattice}
 \end{figure}
 
 The main plot is a \CRANpkg{lattice} plot consisting of multiple panels,
@@ -1461,7 +1461,7 @@ require fewer dependencies than \texttt{xdvir}.
 There are also a number of packages that perform specific
 text-placement tasks, for example \CRANpkg{geomtextpath} \citep{pkg:geomtextpath},
 which can arrange text along an arbitrary path, and
-\CRANpkg{directlabels} {[}\citet{pkg:directlabels}\} and
+\CRANpkg{directlabels} \citep{pkg:directlabels} and
 \CRANpkg{ggforce} \citep{pkg:ggforce}, which provide functions for cleverly
 positioning text annotations, though without typesetting facilities.
 The advantage of \texttt{xdvir} by comparison with these packages
