Fix RJ-2025-030 figure 7 caption

--- a/_articles/RJ-2025-030/Applications.Rmd
+++ b/_articles/RJ-2025-030/Applications.Rmd
@@ -379,7 +379,7 @@ Subsequently, a distinct labeling ID is assigned to each microbead, as
 illustrated by a color gradient. Moreover, the contours of each individual
 object are displayed (Figure \@ref(fig:FIELD2)). The results of the segmentation
 and the extraction of shape-related information are presented in the interactive
-`leaflet` interface (Figure \@ref(fig:leafletPDF)). Presenting information like
+`leaflet` interface (Figure \@ref(`r if (knitr::is_latex_output()) "fig:leafletPDF" else "fig:leafletHTML"`)). Presenting information like
 cluster ID, size, perimeter and width of the detected objects.
 
 (ref:FIELD1) **Displaying the original, background, and foreground Images**: The original image (left) shows the fluorescent microbeads. The middle image displays the background in white (TRUE) and all objects detected by segmentation in black (FALSE). The right image shows only the foreground (microbeads) after detection through segmentation using the `fieldMASK()` function.
@@ -476,6 +476,15 @@ if (knitr::is_latex_output()) {
   sync(m1, m2)
 }
 ```
+
+(ref:leafletHTML) **Displaying Results with an Interactive `leaflet` Tool**: The tool displays the original image on the left. For comparison, the cursor is mirrored to the corresponding image (only visible in HTML format). The left image provides detailed information interactively. Hovering over the objects reveals their labeling ID. Performing a left-click opens a detailed window providing information for the individual object, such as area, perimeter, width, and shape. The packages `FIELDimageR.Extra`, `mapview`, and `leafsync` are used to create the interactive display.
+
+```{r leafletHTML, echo=FALSE, out.width="1%", fig.cap="(ref:leafletHTML)"}
+if (!knitr::is_latex_output()) {
+  knitr::include_graphics("figures/empty.png")
+}
+```
+
 
 In summary, packages such as `EBImage` and `biopixR` provide direct pipelines
 for the extraction of features from images, including shape, size, radius, and
