Fix RJ-2025-038 figure 3 rendering

--- a/_articles/RJ-2025-028/RJ-2025-028.Rmd
+++ b/_articles/RJ-2025-028/RJ-2025-028.Rmd
@@ -473,7 +473,7 @@ ggGeom <- ggplot(samples) +
     scale_x_continuous(breaks=0, labels=muDot) +
     scale_y_continuous(breaks=1:5, expand=expansion(.25)) +
     theme_minimal() +
-    theme(axis.text.x=element_latex(size=16, packages="tikz", 
+    theme(axis.text.x.bottom=element_latex(size=16, packages="tikz", 
                                     margin=margin(-3, 0, 0, 0)),
           axis.ticks.x=element_blank(),
           axis.title.y=element_text(colour="grey"),
