Added CRAN and R Foundation news for issue 2025-3

--- a/_issues/2025-3/2025-3.Rmd
+++ b/_issues/2025-3/2025-3.Rmd
@@ -31,9 +31,12 @@ output:
   rjtools::rjournal_web_issue: default
   rjtools::rjournal_pdf_issue:
     render_all: no
-news: ~ #RJ-2025-3-
+news:
+- RJ-2025-3-cran
+- RJ-2025-3-rfoundation
 
 ---
+
 
 
 
