Updated 2025-3 news items

--- a/_news/RJ-2025-3-cran/RJwrapper.tex
+++ b/_news/RJ-2025-3-cran/RJwrapper.tex
@@ -50,7 +50,7 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
-\usepackage{parskip}
+\usepackage{float, longtable}
 
 \begin{document}
 
@@ -63,7 +63,7 @@
 \month{September}
 
 \begin{article}
-  \input{RJ-2025-3-editorial}
+  \input{RJ-2025-3-cran}
 \end{article}
 
 
