--- a/_news/RJ-2025-3-rfoundation/RJ-2025-3-rfoundation.Rmd
+++ b/_news/RJ-2025-3-rfoundation/RJ-2025-3-rfoundation.Rmd
@@ -9,7 +9,7 @@ author:
   email: Torsten.Hothorn@R-project.org
   orcid: 0000-0001-8301-0471
 output:
-  rjtools::rjournal_web_article:
+  rjtools::rjournal_article:
     self_contained: yes
     toc: no
 volume: 17
