--- a/_news/RJ-2025-3-rfoundation/RJwrapper.tex
+++ b/_news/RJ-2025-3-rfoundation/RJwrapper.tex
@@ -50,7 +50,6 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
-\usepackage{parskip}
 
 \begin{document}
 
@@ -63,7 +62,7 @@
 \month{September}
 
 \begin{article}
-  \input{RJ-2025-3-editorial}
+  \input{RJ-2025-3-rfoundation}
 \end{article}
 
 
