deploy: d012fbb7ac4bad1a6851a622a385ae2a7b7b2c83

--- a/news/RJ-2025-3-editorial/RJ-2025-3-editorial.tex
+++ b/news/RJ-2025-3-editorial/RJ-2025-3-editorial.tex
@@ -10,11 +10,15 @@
 \section*{In this issue}\label{in-this-issue}
 \addcontentsline{toc}{section}{In this issue}
 
-On behalf of the editorial board, I am pleased to present Volume 17 Issue 3 of the R Journal. This issue features eleven research articles, plus news from CRAN, BioConductor and the R Foundation.
+On behalf of the editorial board, I am pleased to present Volume 17 Issue 3 of the R Journal. This issue features eleven research articles, plus news from CRAN and the R Foundation.
 
-TBC
+Article \href{https://journal.r-project.org/articles/RJ-2025-022/}{2025-022} by Abhishek Ulayil, Dianne Cook, Heather Turner, Mitchell O'Hara-Wild, and Christophe Dervieux describes an R Journal initiative to convert legacy articles into R markdown to allow for better accessibility for print-disabled readers. The associated R markdown format provided by the \CRANpkg{rjtools} package also encourages better reproducibility and enables interactivity for future submissions. We continue to use the tooling described in this article to convert LaTeX submissions to the journal into R markdown.
 
-The articles discuss various R packages that have been developed, covering a wide range of topics. Each article provides an overview of the package, its functionality, and examples of its use. All packages discussed are available on CRAN. Supplementary material with fully reproducible code is available for download from the Journal website.
+A review of image processing packages in R is provided by article \href{https://journal.r-project.org/articles/RJ-2025-030/}{2025-030}, covering 38 packages for image analysis published between 2006 and 2024.
+
+The remaining nine articles in this issue describe various R packages developed by members of the R community, and available on CRAN. Each article provides an overview of the package, its functionality, and examples of its use.
+
+Supplementary material for each article, with fully reproducible code, is available for download from the Journal website.
 
 
 \address{%
