More updates to RJ-2025-029

--- a/_articles/RJ-2025-029/RJ-2025-029.Rmd
+++ b/_articles/RJ-2025-029/RJ-2025-029.Rmd
@@ -50,7 +50,7 @@ author:
   - (ORCiD 4160-9257)
   - |
     [nicola.salvati@unipi.it](nicola.salvati@unipi.it){.uri}
-date: '2025-11-24'
+date: '2025-11-25'
 date_received: '2025-03-27'
 journal:
   firstpage: ~
@@ -392,7 +392,7 @@ predictor.
 
 ![Figure 1: An example of longitudinal trajectories affected by both
 time-constant and time-varying unobserved
-heterogeneity](spaghetti.png){#fig:trajectories width="53.0%"
+heterogeneity](spaghetti.png){#fig:trajectories width="100.0%"
 alt="graphic without alt text"}
 
 Let $\boldsymbol{\mathbf{x}}_{it}= (x_{it1}, \dots, x_{itp})^{\prime}$
@@ -419,7 +419,7 @@ quantile-dependent, hidden Markov chain $\{S_{it, q}\}$. As before, this
 is defined over the finite state space
 $\mathcal{S}_q = \{1, \dots, m_q\}$ and is fully described by means of
 the initial probability vector
-$\boldsymbol{\mathbf{\delta}}_q =(\delta_{1,q, \dots, \delta_{m_q,q})^\prime$
+$\boldsymbol{\mathbf{\delta}}_{q} = (\delta_{1,q, \dots, \delta_{m_q,q}})'$
 and the transition probability matrix
 $\boldsymbol{\mathbf{\Gamma}}_{q}$, with generic element
 $\gamma_{s_{it,q} \mid s_{it-1,q},q}.$ The reader must note that, to
@@ -441,13 +441,15 @@ scale, and location parameter denoted by $q$, $\sigma_q$, and
 $\mu_{itgs_{it,q}, q}$, respectively. This latter parameter is defined
 by the following regression model:
 $$\mu_{itgs_{it,q}, q} = \boldsymbol{\mathbf{x}}_{it}^\prime \boldsymbol{\mathbf{\beta}}_q + \boldsymbol{\mathbf{z}}_{it}^\prime \boldsymbol{\mathbf{\zeta}}_{g,q} + \boldsymbol{\mathbf{w}}_{it}^\prime \boldsymbol{\mathbf{\alpha}}_{s_{it,q},q}.$$
-Based on such assumptions, the likelihood function is $$\begin{aligned}
- %\label{eq:lqmHMM_lk}
-L(\cdot \mid q) =\prod_{i = 1}^{n}& \sum_{g = 1}^{G_q}  \sum_{s_{i1,q}=1}^{m_q}\cdots \sum_{s_{iT_i,q}=1}^{m_q} \left[
- \delta_{s_{i1,q},q} \prod_{t = 2}^{T_i} 
-\gamma_{s_{it,q} \mid s_{it-1,q},q}\right] \left[\prod_{t = 1}^{T_i}  f_{y \mid b,s}(y_{it} \mid \boldsymbol{\mathbf{b}}_{i,q} = \boldsymbol{\mathbf{\zeta}}_{g,q}, {s_{it,q}};q)\right]
-\pi_{g,q}, 
-\end{aligned}   (\#eq:lqmHMM-lk)$$ where, as before,
+Based on such assumptions, the likelihood function is 
+$$
+L(\cdot \mid q) = 
+  \prod_{i = 1}^{n} \sum_{g = 1}^{G_q} \sum_{s_{i1,q}=1}^{m_q}\cdots \sum_{s_{iT_i,q}=1}^{m_q} 
+   \left[\delta_{s_{i1,q},q} \prod_{t = 2}^{T_i}  \gamma_{s_{it,q} \mid s_{it-1,q},q}\right] 
+   \left[\prod_{t = 1}^{T_i}  f_{y \mid b,s}(y_{it} \mid \boldsymbol{\mathbf{b}}_{i,q}
+   = \boldsymbol{\mathbf{\zeta}}_{g,q}, {s_{it,q}};q)\right] \pi_{g,q}, 
+$$ 
+where, as before,
 $f_{y \mid b,s}(y_{it} \mid \boldsymbol{\mathbf{b}}_{i,q} = \boldsymbol{\mathbf{\zeta}}_{g,q}, {s_{it,q}};q)$
 denotes the density of the ALD. In this framework, unobserved
 unit-specific features that remain constant over time are captured by
@@ -670,7 +672,7 @@ reasonable choice for the analysis of such data.
 
 ::: center
 ```{=html}
-<img src="qqplot.png" style="width:65.0%"
+<img src="qqplot.png" style="width:100.0%"
 alt="graphic without alt text" />
 ```
 :::
@@ -1383,10 +1385,10 @@ obtained from the block-bootstrap procedure detailed above.
 
 <figure id="fig:plot">
 
-<img src="figplot_1.png" alt="graphic without alt text" style="width:100.0%"/>
-<img src="figplot_2.png" alt="graphic without alt text" style="width:100.0%"/>
+<img src="figplot_1.png" alt="graphic without alt text" style="width:45.0%"/>
+<img src="figplot_2.png" alt="graphic without alt text" style="width:45.0%"/>
 
-<p><img src="figplot_3.png" alt="graphic without alt text" style="width:100.0%"/></p>
+<p><img src="figplot_3.png" alt="graphic without alt text" style="width:50.0%"/></p>
 
 <figcaption>Figure 3: Results from the <code>plot</code>
 method</figcaption>
