--- a/_articles/RJ-2025-029/RJ-2025-029.Rmd
+++ b/_articles/RJ-2025-029/RJ-2025-029.Rmd
@@ -162,7 +162,7 @@ these other packages and ensures greater flexibility thanks to the
 non-parametric nature of the random coefficient distribution, which
 allows to avoid untestable parametric assumptions. The second benefit of
 `lqmix` entails the modeling of quantiles rather than the mean. Quantile
-regression allows indeed to analyze the impact that predictors may have
+regression allows one to analyze the impact that predictors may have
 on different parts of the conditional response distribution, as well as
 to deal with outliers and/or heavy tails that make the Gaussian
 assumption typically used for continuous data unreliable.
