--- a/_issues/2025-3/2025-3.Rmd
+++ b/_issues/2025-3/2025-3.Rmd
@@ -30,7 +30,7 @@ articles:
 output:
   rjtools::rjournal_web_issue: default
   rjtools::rjournal_pdf_issue:
-    render_all: no
+    render_all: yes
 news:
 - RJ-2025-3-cran
 - RJ-2025-3-rfoundation
