--- a/_news/RJ-2025-3-cran/RJ-2025-3-cran.Rmd
+++ b/_news/RJ-2025-3-cran/RJ-2025-3-cran.Rmd
@@ -27,6 +27,9 @@ preamble: \usepackage{float, longtable}
 volume: 17
 issue: 3
 slug: RJ-2025-3-cran
+journal:
+  lastpage: 262
+  firstpage: 261
 
 ---
 
