--- a/_articles/RJ-2025-029/RJ-2025-029.Rmd
+++ b/_articles/RJ-2025-029/RJ-2025-029.Rmd
@@ -53,8 +53,8 @@ author:
 date: '2025-11-25'
 date_received: '2025-03-27'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 188
+  lastpage: 212
 volume: 17
 issue: 3
 slug: RJ-2025-029
