Fix caching of spatial objects in RJ-2025-025

--- a/_articles/RJ-2025-025/RJ-2025-025.Rmd
+++ b/_articles/RJ-2025-025/RJ-2025-025.Rmd
@@ -136,7 +136,7 @@ Data in this example are from Luo et al. [-@luo2024], in which the authors hypot
 
 Read in raster data to \CRANpkg{terra} [@hijmans2023] `SpatRaster` objects (Figure \@ref(fig:fig-4)). The two objects need the same projection, extent, and resolution.
 
-```{r ex5.1, echo=T}
+```{r ex5.1, echo=T, cache=FALSE}
 library(terra)
 library(magrittr)
 
@@ -157,7 +157,7 @@ The first step of the analysis is to define which cells are boundary elements (i
 
 The song raster already contains boundary intensity values, from which boundary elements can be directly determined. But the values in the genetic raster are the trait data, so boundary intensity needs to be calculated from the genetic admixture coefficient values (`calculate_intensity = TRUE`).
 
-```{r ex5.2, echo=T, tidy=T}
+```{r ex5.2, echo=T, tidy=T, cache=FALSE}
 library(BoundaryStats)
 
 song_boundaries <- define_boundary(songs)
@@ -182,7 +182,7 @@ For both boundary statistics, use the function `boundary_null_distrib.` For the 
 
 Both functions take the `SpatRaster` object(s), a neutral landscape model, and the number of iterations. Further arguments may be required, depending on these arguments. For `overlap_null_distrib`, separate models can be specified for the two variables, and the variable in the first argument is assumed to depend on the variable in the second argument. The argument `rand_both` specifies whether the function should simulate random landscapes for the second `SpatRaster` object; since some hypotheses assume $x$ depends on a specific underlying distribution of boundaries in $y$, users can choose to keep boundaries for $y$ static for each iteration. For this example, the genetic boundary is hypothesized to depend on song boundaries. Therefore, the `SpatRaster` object containing the genetic admixture interpolation is the first argument, and I keep the song boundaries static (`rand_both = FALSE`).
 
-```{r ex5.4, echo=T, tidy=T, tidy.opts=list(width.cutoff=80), results='hide'}
+```{r ex5.4, cache=TRUE, echo=T, tidy=T, tidy.opts=list(width.cutoff=80), results='hide'}
 song_boundary_null <- boundary_null_distrib(songs, calculate_intensity = FALSE, cat = FALSE, n_iterations = 100, threshold = 0.2, model = 'gaussian')
 genetic_boundary_null <- boundary_null_distrib(genetic, calculate_intensity = TRUE, cat = FALSE, n_iterations = 100, threshold = 0.2, model = 'gaussian')
 
