Fixed some long lines

--- a/_articles/RJ-2025-023/RJ-2025-023.Rmd
+++ b/_articles/RJ-2025-023/RJ-2025-023.Rmd
@@ -140,7 +140,10 @@ We can easily read the data file in from its zipper format online and convert to
 
 ```{r, echo=FALSE}
 temp <- tempfile()
-download.file("https://github.com/hendersontrent/bonn-eeg-data/raw/refs/heads/main/INP_Bonn_EEG.txt.zip",temp)
+download.file(
+  "https://github.com/hendersontrent/bonn-eeg-data/raw/refs/heads/main/INP_Bonn_EEG.txt.zip",
+  temp
+)
 bonn_eeg <- read.table(unz(temp, "INP_Bonn_EEG.txt"))
 unlink(temp)
 bonn_eeg <- as_tsibble(bonn_eeg, key = c("id", "group"), index = "timepoint")
