--- a/articles/RJ-2025-027/RgofR2sampleRolke.tex
+++ b/articles/RJ-2025-027/RgofR2sampleRolke.tex
@@ -589,7 +589,8 @@ Power estimation for discrete data works the same. As an example consider the fo
 
 \begin{verbatim}
 vals=70:140
-pnull=function(lambda) (ppois(70:140, lambda)-ppois(69,lambda))/(ppois(140, lambda)-ppois(69,lambda))
+pnull=function(lambda) (ppois(70:140, lambda)-ppois(69,lambda)) / 
+  (ppois(140, lambda)-ppois(69,lambda))
 rnull=function(lambda) {
   vals=70:140
   x=rpois(1000, lambda)
