Re-render 2025-3 issue

--- a/_issues/2025-3/2025-3.Rmd
+++ b/_issues/2025-3/2025-3.Rmd
@@ -28,9 +28,8 @@ articles:
   before: ~
   after: ~
 output:
+  rjtools::rjournal_pdf_issue: default
   rjtools::rjournal_web_issue: default
-  rjtools::rjournal_pdf_issue:
-    render_all: yes
 news:
 - RJ-2025-3-cran
 - RJ-2025-3-rfoundation
