Added issue 2025-3 to bib file

--- a/RJournal.bib
+++ b/RJournal.bib
@@ -9979,3 +9979,155 @@
   volume  = 13,
   year    = 2021
 }
+@article{RJ-2025-021,
+  TITLE = {{lsirm12pl: An R Package for the Latent Space Item Response Model}},
+  AUTHOR = {Dongyoung Go and Gwanghee Kim and Jina Park and Junyong Park and Minjeong Jeon and Ick Hoon Jin},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {4-29},
+  DOI = {10.32614/RJ-2025-021},
+  URL = {https://journal.r-project.org/articles/RJ-2025-021},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-022,
+  TITLE = {{Converting LaTeX Legacy R Journal Articles into R Markdown Articles using texor and rebib}},
+  AUTHOR = {Abhishek Ulayil and Dianne Cook and Heather Turner and Mitchell O'Hara-Wild and Christophe Dervieux},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {30-42},
+  DOI = {10.32614/RJ-2025-022},
+  URL = {https://journal.r-project.org/articles/RJ-2025-022},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-023,
+  TITLE = {{Feature-Based Time-Series Analysis in R using the Theft Ecosystem}},
+  AUTHOR = {Trent Henderson and Ben D. Fulcher},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {43-68},
+  DOI = {10.32614/RJ-2025-023},
+  URL = {https://journal.r-project.org/articles/RJ-2025-023},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-024,
+  TITLE = {{QTE.RD: An R Package for Quantile Treatment Effects in Regression-Discontinuity Designs}},
+  AUTHOR = {Zhongjun Qu and Jungmo Yoon},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {69-88},
+  DOI = {10.32614/RJ-2025-024},
+  URL = {https://journal.r-project.org/articles/RJ-2025-024},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-025,
+  TITLE = {{BoundaryStats: An R Package to Calculate Boundary Overlap Statistics}},
+  AUTHOR = {Amy Luo},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {89-99},
+  DOI = {10.32614/RJ-2025-025},
+  URL = {https://journal.r-project.org/articles/RJ-2025-025},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-026,
+  TITLE = {{R package GofCens: Goodness-of-Fit Methods for Right-Censored Data}},
+  AUTHOR = {Mireia Besalú and Klaus Langohr and Matilde Francisco and Arnau Garcia-Fernández and Guadalupe Gómez Melis},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {100-124},
+  DOI = {10.32614/RJ-2025-026},
+  URL = {https://journal.r-project.org/articles/RJ-2025-026},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-031,
+  TITLE = {{moonboot: An R Package Implementing m-out-of-n Bootstrap Methods}},
+  AUTHOR = {Christoph Dalitz and Felix Lögler},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {125-137},
+  DOI = {10.32614/RJ-2025-031},
+  URL = {https://journal.r-project.org/articles/RJ-2025-031},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-027,
+  TITLE = {{Rgof and R2sample: Testing and Benchmarking for the Univariate Goodness-of-Fit and Two-Sample Problems}},
+  AUTHOR = {Wolfgang Rolke},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {138-161},
+  DOI = {10.32614/RJ-2025-027},
+  URL = {https://journal.r-project.org/articles/RJ-2025-027},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-028,
+  TITLE = {{Rendering LaTeX in R}},
+  AUTHOR = {Paul Murrell},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {162-187},
+  DOI = {10.32614/RJ-2025-028},
+  URL = {https://journal.r-project.org/articles/RJ-2025-028},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-029,
+  TITLE = {{lqmix: an R Package for Longitudinal Data Analysis via Linear Quantile Mixtures}},
+  AUTHOR = {Marco Alfó and Maria Francesca Marino and Maria Giovanna Ranalli and Nicola Salvati},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {188-211},
+  DOI = {10.32614/RJ-2025-029},
+  URL = {https://journal.r-project.org/articles/RJ-2025-029},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
+
+
+@article{RJ-2025-030,
+  TITLE = {{Exploring Image Analysis in R: Applications and Advancements}},
+  AUTHOR = {Tim Brauckhoff and Julius Rublack and Stefan Rödiger},
+  MONTH = {sep},
+  YEAR = {2025},
+  PAGES = {212-260},
+  DOI = {10.32614/RJ-2025-030},
+  URL = {https://journal.r-project.org/articles/RJ-2025-030},
+  JOURNAL = {{The R Journal}},
+  VOLUME = {17},
+  NUMBER = {3}
+}
